# nrpcle

./: .gitignore  .gitreview  Makefile  README.txt  README.txt~  bitbucket-pipelines.yml  build_hbp_ros_packages.sh  build_thirdparty_ros_packages.sh  dev_run_all_tests_remote.sh  module_test.sh  neurorobotics.CLE.spec  rpmbuild.sh  run_tests.sh  ubuntu_fix_cv2.sh  verify.sh
GazeboRosPackage/src/cle_ros_msgs/: CMakeLists.txt  package.xml
GazeboRosPackage/src/cle_ros_msgs/msg/: SpikeCount.msg  SpikeData.msg  SpikeEvent.msg  SpikeRate.msg
GazeboRosPackage/src/cle_ros_msgs/srv/: GetVersion.srv  StartNewSimulation.srv  get_simulation_state.srv
architecture/cle/: Closed Loop Engine Architecture.docx  Closed Loop Engine Architecture.pptx
architecture/tf_framework/: Transfer Functions Architecture.docx  Transfer Functions Architecture.pptx
brainsim/: BrainInterface.py  PyNNCommunicationAdapter.py  PyNNControlAdapter.py  README.md
demo/: Husky.py  MS2TransferFunctions.py  PyNNScript.py  demo.py  demo.sh
hbp_nrp_cle/: .gitignore  MANIFEST.in  README.txt  requirements.txt  setup.py
python_cle/: .gitignore  .gitignore~  README.txt~  requirements.txt  setup.py  setup.py~
robotsim/: RobotInterface.py  RosCommunicationAdapter.py  RosControlAdapter.py
tests/: .gitignore  MyTransferFunctions.py  PyNNTransferFunction.py  husky.py  run_tests.sh
tf_framework/: Neuron2Robot.py  Robot2Neuron.py  TransferFunctionInterface.py  TransferFunctionManager.py  TransferFunctionsInterface.py  TransferFunctionsNode.py  __init__.py  config.py  tf_framework.py
(+686 files in other folders)
